# lab-control-mcp

./: .env.example  .mcp.json  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: com.labcontrol.mcp.plist  install-mcp-service.sh
docs/: MCP.md  design.md  requirements.md
src/labcontrol/: __init__.py  config.py  ops.py  server.py
tests/: test_auth.py  test_ops.py
