[project]
name = "lab-control-mcp"
version = "0.1.0"
description = "MCP server to operate the home AI lab — diagnostics, model ops, and gated remote commands across the Mac mini and Alienware."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27",
    "uvicorn>=0.34",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
labctl-mcp = "labcontrol.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/labcontrol"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
